--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "sass": "^1.84.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-imagemin": "^0.6.1"
   },
   "dependencies": {
     "just-validate": "^4.3.0",
